--- a/src/scss/layouts/bmg.scss
+++ b/src/scss/layouts/bmg.scss
@@ -155,8 +155,8 @@ $timeline-overview-height: 60px;
         border-bottom: 10px solid $grey1;
         height: 1.2em;
         display: block;
-        margin-right: 1px;
-        padding-left: 5px;
+        margin-right: 0;
+        padding-left: 2px;
         color: $grey2;
       }
     }
